Halfway done incorporating Undertale analysis.
-Peter Mawhorter

--- a/references.bib
+++ b/references.bib
@@ -134,9 +134,9 @@
   year={1783},
   publisher={T. Cadell},
   address={The Strand, London},
-  addendum={Project Gutenberg, online, January 29, 2016 (EBook 9175).},
+  addendum={Project Gutenberg, online, (EBook 9175); accessed 2018-06-22.},
   url={http://www.gutenberg.org/ebooks/9175},
-  urldate={2016-01-29}
+  urldate={2018-06-22}
 }
 
 @book{freytag1894technique,
@@ -160,8 +160,8 @@
 }
 
 @inbook{borges1956garden,
-  title={The Garden of Forking Paths},
-  booktitle={Ficciones},
+  chapter={The Garden of Forking Paths},
+  title={Ficciones},
   author={Jorge Luis Borges},
   date={1956},
   publisher={Emec\'e Editores},
@@ -261,7 +261,7 @@
   year={1971}
 }
 
-@inbook{lakatos1971history,
+@inproceedings{lakatos1971history,
 author={Lakatos, Imre},
 editor={Buck, Roger C. and Cohen, Robert S.},
 chapter={History of Science and its Rational Reconstructions},
@@ -347,10 +347,10 @@ year = {1975}
 } 
 
 
-@inbook{thomson1976killing,
-  chapter={Killing, Letting Die, and the Trolley Problem},
+@incollection{thomson1976killing,
+  title={Killing, Letting Die, and the Trolley Problem},
   author={Thomson, Judith Jarvis},
-  title={Ethical Theory},
+  booktitle={Ethical Theory},
   edition={Second Edition},
   editor={Russ Shafer-Landau},
   pages={543--551},
@@ -597,11 +597,11 @@ year = {1975}
   year={1989}
 }
 
-@inbook{campbell1990three,
+@incollection{campbell1990three,
 author={Campbell, J. A.},
 editor={Derek Patridge and Yorick Wilks},
-chapter={Three Novelties of AI: Theories, Programs and Rational Reconstructions},
-title={The Foundations of Artificial Intelligence: A Sourcebook},
+title={Three Novelties of AI: Theories, Programs and Rational Reconstructions},
+booktitle={The Foundations of Artificial Intelligence: A Sourcebook},
 year={1990},
 publisher={Cambridge University Press},
 address={Newcastle upon Tyne, UK},
@@ -1378,9 +1378,9 @@ url={http://www.digra.org/wp-content/uploads/digital-library/06276.41516.pdf}
 % Audience, performer, and immersionist modes of engagement. Lots of other
 % great points that I don't remember when writing this summary. Talks about
 % semiotics.
-@inbook{lindley2005story,
-  chapter={Story and Narrative Structures in Computer Games},
-  title={Developing Interactive Narrative Content: sagas/sagasnet reader},
+@incollection{lindley2005story,
+  title={Story and Narrative Structures in Computer Games},
+  booktitle={Developing Interactive Narrative Content: sagas/sagasnet reader},
   author={Lindley, Craig A},
   editor={Bushoff, Brunhild},
   year={2005},
@@ -1463,11 +1463,11 @@ url={http://www.digra.org/wp-content/uploads/digital-library/06276.41516.pdf}
   publisher={IEEE}
 }
 
-@inbook{peinado2006minstrel,
+@incollection{peinado2006minstrel,
 author={Peinado, Federico and Gerv{\'a}s, Pablo},
 editor={G{\"o}bel, Stefan and Malkewitz, Rainer and Iurgel, Ido},
-chapter={{Minstrel Reloaded: From the Magic of Lisp to the Formal Semantics of OWL}},
-title={Proceedings of the Third International Conference on Technologies for Interactive Digital Storytelling and Entertainment},
+title={{Minstrel Reloaded: From the Magic of Lisp to the Formal Semantics of OWL}},
+booktitle={Proceedings of the Third International Conference on Technologies for Interactive Digital Storytelling and Entertainment},
 year={2006},
 publisher={Springer},
 address={Berlin, Heidelberg},
@@ -1491,9 +1491,10 @@ doi={10.1007/s11031-006-9051-8},
 url={http://dx.doi.org/10.1007/s11031-006-9051-8}
 }
 
-@inbook{simon2006computational,
+@incollection{simon2006computational,
   title={Computational Models: Why Build Them?},
   author={Simon, Herbert A},
+  editor={Nadel, Lynn},
   booktitle={Encyclopedia of Cognitive Science},
   year={2006},
   publisher={John Wiley \& Sons, Ltd},
@@ -2380,7 +2381,7 @@ abstract = {Just as books and films about traumatic events have become part of W
 
 % War games, trauma, and complicity -> lack of choices in Spec Ops: The Line.
 @article{potzsch2017selective,
-author = {Holger P{\:o}tzsch},
+author = {Holger Pötzsch},
 title ={Selective Realism: {F}iltering Experiences of War and Violence in First- and Third-Person Shooters},
 journal = {Games and Culture},
 volume = {12},
@@ -2401,6 +2402,139 @@ abstract = {The present article develops the concept of selective realism to und
   year = {2018},
 }
 
+
+@phdthesis{perez2017undertale,
+  title={Undertale: {A} Case Study in Ludomusicology},
+  author={Perez, Matthew},
+  school={Queens College of the City University of New York},
+  year={2017},
+  note={Master's thesis}
+}
+
+@phdthesis{muller2017undertale,
+  title={Undertale: Violence in Context},
+  author={Müller, Alexandra Karin},
+  school={Simon Fraser University},
+  year={2017},
+  note={Capstone paper. Online: \href{http://summit.sfu.ca/item/17572}{\nolinkurl{http://summit.sfu.ca/item/17572}}; accessed 2018-06-22.},
+  url={http://summit.sfu.ca/item/17572},
+  urldate={2018-06-22},
+}
+
+@inproceedings{day2017agency,
+ author = {Day, Timothy and Zhu, Jichen},
+ title = {Agency Informing Techniques: {Communicating} Player Agency in Interactive Narratives},
+ booktitle = {Proceedings of the 12th International Conference on the Foundations of Digital Games},
+ series = {FDG '17},
+ year = {2017},
+ isbn = {978-1-4503-5319-9},
+ location = {Hyannis, Massachusetts},
+ pages = {56:1--56:4},
+ articleno = {56},
+ numpages = {4},
+ url = {http://doi.acm.org.libproxy.mit.edu/10.1145/3102071.3106363},
+ doi = {10.1145/3102071.3106363},
+ acmid = {3106363},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {agency, computer games, design, interactive narrative},
+} 
+
+@article{weaver2012mirrored,
+author = {Weaver, Andrew J. and Lewis, Nicky},
+title = {Mirrored Morality: An Exploration of Moral Choice in Video Games},
+journal = {Cyberpsychology, Behavior, and Social Networking},
+volume = {15},
+number = {11},
+pages = {610-614},
+year = {2012},
+doi = {10.1089/cyber.2012.0235},
+note ={PMID: 23017118},
+URL = {https://doi.org/10.1089/cyber.2012.0235},
+eprint = {https://doi.org/10.1089/cyber.2012.0235},
+abstract = { Abstract This exploratory study was designed to examine how players make moral choices in video games and what effects these choices have on emotional responses to the games. Participants (n=75) filled out a moral foundations questionnaire (MFQ) and then played through the first full act of the video game Fallout 3. Game play was recorded and content analyzed for the moral decisions made. Players also reported their enjoyment of and emotional reactions to the game and reflected on the decisions they made. The majority of players made moral decisions and behaved toward the nonplayer game characters they encountered as if these were actual interpersonal interactions. Individual differences in decision making were predicted by the MFQ. Behaving in antisocial ways did increase guilt, but had no impact on enjoyment. }
+}
+
+@article{funk2003playing,
+title = "Playing violent video games, desensitization, and moral evaluation in children",
+journal = "Journal of Applied Developmental Psychology",
+volume = "24",
+number = "4",
+pages = "413 - 436",
+year = "2003",
+issn = "0193-3973",
+doi = "https://doi.org/10.1016/S0193-3973(03)00073-X",
+url = "http://www.sciencedirect.com/science/article/pii/S019339730300073X",
+author = "Jeanne B. Funk and Debra D. Buchman and Jennifer Jenks and Heidi Bechtoldt",
+keywords = "Children, Video games, Violence, Moral development, Desensitization"
+}
+
+@article{ferguson2008school,
+  title={The school shooting/violent video game link: {Causal} relationship or moral panic?},
+  author={Ferguson, Christopher J},
+  journal={Journal of Investigative Psychology and Offender Profiling},
+  volume={5},
+  number={1-2},
+  pages={25--37},
+  year={2008},
+  publisher={Wiley Online Library}
+}
+
+@incollection{svelch2010good,
+author={Jaroslav \v{S}velch},
+editor={Karen Schrier and David Gibson},
+title={The Good, The Bad, and The Player: {The} Challenges to Moral Engagement in Single-Player Avatar-Based Video Games},
+booktitle={Ethics and Game Design: {Teaching} Values through Play},
+year={2010},
+publisher={IGI Glboal},
+pages={52--68},
+isbn={9781615208456},
+doi={10.4018/978-1-61520-845-6},
+url={http://dx.doi.org/10.4018/978-1-61520-845-6}
+}
+
+@article{consalvo2016playing,
+author = {Mia Consalvo and Thorsten Busch and Carolyn Jong},
+title ={Playing a Better Me: How Players Rehearse Their Ethos via Moral Choices},
+journal = {Games and Culture},
+volume = {11},
+number = {7--8},
+pages = {1--20},
+year = {2016},
+doi = {10.1177/1555412016677449},
+URL = {https://doi.org/10.1177/1555412016677449},
+eprint = {https://doi.org/10.1177/1555412016677449},
+abstract = { This article is an exploration of players’ understandings of games that offer moral dilemmas in order to explore player choice in tandem with game mechanics. We investigate how game structures, including the presence of choice, a game’s length, and avatar presentation, push players in particular ways and also how players use those systems for their own ends. We explore how players “rehearse their ethos” through gameplay and how they are continually pushing back against the magic circle. It is based on two-dozen semi-structured interviews with players conducted in 2012. It illustrates that there are no clear-cut answers—game structures, including narratives, character designs, length, or save systems, can push players to act in certain ways that may or may not align with their own beliefs and goals. }
+}
+
+@article{ellithorpe2015moral,
+author = {Ellithorpe, Morgan E. and Cruz, Carlos and Velez, John A. and Ewoldsen, David R. and Bogert, Adam K.},
+title = {Moral License in Video Games: {When} Being Right Can Mean Doing Wrong},
+journal = {Cyberpsychology, Behavior, and Social Networking},
+volume = {18},
+number = {4},
+pages = {203-207},
+year = {2015},
+doi = {10.1089/cyber.2014.0599},
+note ={PMID: 25803312},
+URL = {https://doi.org/10.1089/cyber.2014.0599},
+eprint = {https://doi.org/10.1089/cyber.2014.0599},
+abstract = { Abstract Research on video game violence has found largely consistent evidence that violence in video games tends to be associated with an increase in antisocial behavior. However, this body of work has mostly ignored one prominent feature of many violent games: moral decision making. It is possible that the influence of video game violence could change when moral decisions are brought into the context. One way video games change behavior is through changes in players' self-perceptions, a process called identity simulation. In addition, a perspective called moral license predicts that these effects should not necessarily be consistent across behaviors, in that people should try to balance selfishness with keeping the moral high ground across many behaviors. Therefore, moral choices (or immoral choices) in a video game may predict less moral (or more moral) behaviors right after the game. However, later behavior may revert yet again, creating a cycle of pro- and antisocial behaviors. The present experiment asks participants to make moral choices in a video game, and then measures their behavior on two subsequent tasks. Results indicate that taking what participants perceive to be the more moral mind-set in the video game predicts more antisocial behavior on the first task, but more pro-social behavior on the next task. These results support identity simulation and moral license processes in a video game and moral behavior context, and indicate that there may be greater complexity in video game violence effects than previously understood. }
+}
+
+@article{kastarov2017training,
+author = {Johannes Katsarov and Markus Christen and Ralf Mauerhofer and David Schmocker and Carmen Tanner},
+title ={Training Moral Sensitivity Through Video Games: A Review of Suitable Game Mechanisms},
+journal = {Games and Culture},
+volume = {12},
+number = {5},
+pages = {1--23},
+year = {2017},
+doi = {10.1177/1555412017719344},
+URL = {https://doi.org/10.1177/1555412017719344},
+eprint = {https://doi.org/10.1177/1555412017719344},
+abstract = { The goal of this study is to support game designers in the selection and implementation of game mechanisms to promote players’ moral sensitivity (MS). A lack of MS may lead people to behave unethically, without awareness for their actions’ moral implications. In this study, we conduct a theory-based evaluation of 20 distinct game mechanisms in view of their potential to promote MS. MS is thereby operationalized in terms of three learning outcomes (LOs): empathic concern for relevant groups, alertness to values/principles, and awareness for one’s vulnerability to biases. This study suggests that MS is best promoted through a careful combination of game mechanisms, addressing all three LOs. }
+}
 
 %%%%%%%%%%%%%%%%
 % Works of art %
@@ -2599,6 +2733,14 @@ abstract = {The present article develops the concept of selective realism to und
   year={2013}
 }
 
+@misc{fox2015undertale,
+  title={Undertale},
+  author={Toby Fox},
+  howpublished={Self-published},
+  note={Various platforms},
+  year={2015}
+}
+
 %%%%%%%%%%%%%%
 % Blog posts %
 %%%%%%%%%%%%%%
@@ -2608,8 +2750,8 @@ abstract = {The present article develops the concept of selective realism to und
   title={Choice of Games Website},
   year={2010},
   url={http://www.choiceofgames.com/},
-  urldate={2016-02-04},
-  howpublished={Online: \href{http://www.choiceofgames.com/}{\nolinkurl{http://www.choiceofgames.com/}}; accessed 2016-02-04.}
+  urldate={2018-06-22},
+  howpublished={Online: \href{http://www.choiceofgames.com/}{\nolinkurl{http://www.choiceofgames.com/}}; accessed 2018-06-22.}
 }
 
 @misc{choiceofgames2010gamedesign,
@@ -2617,8 +2759,8 @@ abstract = {The present article develops the concept of selective realism to und
   title={\upshape ``{G}ame {D}esign'' blog category},
   year={2010},
   url={http://www.choiceofgames.com/category/blog/game-design/},
-  urldate={2016-02-04},
-  howpublished={Online: \href{http://www.choiceofgames.com/category/blog/game-design/}{\nolinkurl{http://www.choiceofgames.com/category/blog/game-design/}}; accessed 2016-02-04.}
+  urldate={2018-06-22},
+  howpublished={Online: \href{http://www.choiceofgames.com/category/blog/game-design/}{\nolinkurl{http://www.choiceofgames.com/category/blog/game-design/}}; accessed 2018-06-22.}
 }
 
 @misc{choiceofgames2010rules,
@@ -2626,8 +2768,8 @@ abstract = {The present article develops the concept of selective realism to und
   title={5 Rules for Writing Interesting Choices in Multiple Choice Games},
   year={2010},
   url={http://www.choiceofgames.com/2010/03/5-rules-for-writing-interesting-choices-in-multiple-choice-games/},
-  urldate={2016-02-04},
-  howpublished={Online: \href{http://www.choiceofgames.com/2010/03/5-rules-for-writing-interesting-choices-in-multiple-choice-games/}{\nolinkurl{http://www.choiceofgames.com/2010/03/5-rules-for-writing-interesting-choices-in-multiple-choice-games/}}; accessed 2016-02-04.}
+  urldate={2018-06-22},
+  howpublished={Online: \href{http://www.choiceofgames.com/2010/03/5-rules-for-writing-interesting-choices-in-multiple-choice-games/}{\nolinkurl{http://www.choiceofgames.com/2010/03/5-rules-for-writing-interesting-choices-in-multiple-choice-games/}}; accessed 2018-06-22.}
 }
 
 @misc{choiceofgames2010plan,
@@ -2635,8 +2777,8 @@ abstract = {The present article develops the concept of selective realism to und
   title={How We Plan a ChoiceScript Game},
   year={2010},
   url={http://www.choiceofgames.com/2010/05/planning-a-choicescript-game/},
-  urldate={2016-02-04},
-  howpublished={Online: \href{http://www.choiceofgames.com/2010/05/planning-a-choicescript-game/}{\nolinkurl{http://www.choiceofgames.com/2010/05/planning-a-choicescript-game/}}; accessed 2016-02-04.}
+  urldate={2018-06-22},
+  howpublished={Online: \href{http://www.choiceofgames.com/2010/05/planning-a-choicescript-game/}{\nolinkurl{http://www.choiceofgames.com/2010/05/planning-a-choicescript-game/}}; accessed 2018-06-22.}
 }
 
 %%%%%%%%%%%%%%
@@ -2729,4 +2871,24 @@ abstract = {The present article develops the concept of selective realism to und
   url={https://www.youtube.com/watch?v=45PdtGDGhac},
   urldate={2018-05-21},
   howpublished={Online: \href{https://www.youtube.com/watch?v=45PdtGDGhac}{\nolinkurl{https://www.youtube.com/watch?v=45PdtGDGhac}}; accessed 2018-05-21.}
+}
+
+@misc{hughes2015undertale,
+  author={William Hughes},
+  title={Undertale dares players to make a mistake they can never take back},
+  year={2015},
+  month={12},
+  url={https://games.avclub.com/undertale-dares-players-to-make-a-mistake-they-can-neve-1798287299},
+  urldate={2018-06-22},
+  howpublished={Online; \href{https://games.avclub.com/undertale-dares-players-to-make-a-mistake-they-can-neve-1798287299}{\nolinkurl{https://games.avclub.com/undertale-dares-players-to-make-a-mistake-they-can-neve-1798287299}}; accessed 2018-06-22.}
+}
+
+@misc{feeld2015interview,
+  author={Julian Feeld},
+  title={Interview: Toby Fox of Undertale},
+  year={2015},
+  month={9},
+  url={http://outermode.com/interview-toby-fox-undertale},
+  urldate={2018-06-22},
+  howpublished={Online; \href{http://outermode.com/interview-toby-fox-undertale}{\nolinkurl{http://outermode.com/interview-toby-fox-undertale}}; accessed 2018-06-22.}
 }
