--- a/cpbe.tex
+++ b/cpbe.tex
@@ -55,12 +55,12 @@
 % Author Orchid ID: enter ID or remove command
 % TODO: These
 \newcommand{\orcidauthorA}{0000-0001-7821-1973} % Use \orcidA{} below
-\newcommand{\orcidauthorB}{0000-0000-000-000X} % TODO: Does Arnav have one?
+\newcommand{\orcidauthorB}{0000-0003-3874-1720}
 \newcommand{\orcidauthorC}{0000-0002-1897-6293} % TODO: Verify this?
 \newcommand{\orcidauthorD}{0000-0003-1964-7624} % TODO: Verify this?
 
 % Authors, for the paper (add full first names)
-\Author{Peter Mawhorter *$^{1}$ \orcidA{}, Arnav Jhala $^{2}$ \orcidB{}, Michael Mateas $^{3}$ \orcidC{} and Noah Wardrip-Fruin $^{3}$ \orcidD{}}
+\Author{Peter Mawhorter *$^{1}$ \orcidA{}, Carmen Zegura $^{2}$, Alex Gray $^{3}$, Arnav Jhala $^{3}$ \orcidB{}, Michael Mateas $^{4}$ \orcidC{} and Noah Wardrip-Fruin $^{4}$ \orcidD{}}
 
 % Authors, for metadata in PDF
 \AuthorNames{Peter Mawhorter, Arnav Jhala, Michael Mateas and Noah Wardrip-Fruin}
@@ -68,8 +68,9 @@
 % Affiliations / Addresses (Add [1] after \address if there is only one affiliation.)
 \address{%
 $^{1}$ \quad Massachusetts Institute of Technology; pmawhorter@gmail.com\\
-$^{2}$ \quad North Carolina State University; ajhala@ncsu.edu\\
-$^{3}$ \quad University of California Santa Cruz; [michaelm, \!nwf]@soe.ucsc.edu}
+$^{2}$ \quad Brown University; TODO@brown.edu\\
+$^{3}$ \quad North Carolina State University; [TODO, ajhala]@ncsu.edu\\
+$^{4}$ \quad University of California Santa Cruz; [michaelm, nwf]@soe.ucsc.edu}
 
 % Contact information of the corresponding author
 \corres{Correspondence: pmawhorter@gmail.com}
@@ -81,13 +82,15 @@ Developed in part to support algorithmic generation of narrative choices, the th
 %
 The theory also emphasizes the need to account for players' various modes of engagement, which vary both during play and between players.
 %
-In this work, we illustrate the non-computational application of choice poetics to the analysis of two different choices, in order to further develop the theory and make it more accessible to others.
+In this work, we illustrate the non-computational application of choice poetics to the analysis of three different choices, in order to further develop the theory and make it more accessible to others.
 %
 We focus first on analyzing so-called false choices in the game ``Mass Effect,'' and show how they actually provide meaningfully different outcomes for players who are utilizing certain modes of engagement.
 %
-We then give an example of fine-grained analysis using a choice from the game ``Papers Please,'' which breaks down options and their outcomes to illustrate how the choice pushes players towards complicity via the introduction of uncertainty.
+Second, we use choice poetics to examine the central repeated choice in ``Undertale,'' and show how it can be used to contrast two different player types that will approach a choice differently.
 %
-Through both of these examples, we hope to show the usefulness of choice poetics as a framework for understanding narrative choices, and to demonstrate concretely how one could productively apply it to choices `in the wild.'}  
+Finally, we give an example of fine-grained analysis using a choice from the game ``Papers Please,'' which breaks down options and their outcomes to illustrate how the choice pushes players towards complicity via the introduction of uncertainty.
+%
+Through all of these examples, we hope to show the usefulness of choice poetics as a framework for understanding narrative choices, and to demonstrate concretely how one could productively apply it to choices `in the wild.'}  
 
 \keyword{choice poetics; poetics; narrative games; choices; player goals; roleplay; complicity}
 
@@ -101,7 +104,7 @@ Originally developed in some of our prior work \citep{mawhorter2014towards,mawho
 %
 In part, choice poetics was developed in order to be deployed mechanistically in a generative system that produces narrative choices, as described in \citep{mawhorter2015generating,mawhorter2016artificial}.
 %
-However, the theory should also support human analysis of narrative choices, and the goal of this paper is to demonstrate its suitability for that purpose by giving two examples of choice-poetics-based analysis.
+However, the theory should also support human analysis of narrative choices, and the goal of this paper is to demonstrate its suitability for that purpose by giving examples of choice-poetics-based analysis.
 %
 We hope that these examples not only demonstrate the use of the theory, but also meaningfully contribute to existing discussions of the choices that we analyze.
 
@@ -115,7 +118,14 @@ The motives behind these choice constructions and impacts on the player have alr
 As we will demonstrate, a careful consideration of possible player goals within different modes of engagement reveals that these choices which seem to have no difference in their outcomes can actually have significance for the extra-digital narrative produced by a player during play, and that they are thereby quite meaningful choices for players who are interested in role play.
 
 
-After this exploration of the importance of modes of engagement, we shift focus to offer a more detailed example of choice analysis, by deconstructing a repeated choice from \emph{Papers Please}: whether or not to approve the entry permit of someone who claims to be a refugee \citep{pope2013papers}.
+After showing the importance of considering modes of engagement in \emph{Mass Effect}, we give an example of contrasting modes of engagement by looking at \emph{Undertale}'s central repeated choice of how to interact with wandering monsters \citep{fox2015undertale}.
+%
+\emph{Undertale}'s plot revolves around the player's aggression: does the player take their cue from other games and attack every `monster' they come across, or do they instead make use of the game's unusual `Mercy' option to avoid conflict?
+%
+By deconstructing this repeated choice, we can understand in detail how different player goals might lead to different play styles, and how the game reinforces both aggressive and pacifist styles but gives those players different endings which encourages dialogue within the player community.
+
+
+After exploring the importance of modes of engagement, we shift focus by deconstructing a repeated choice from \emph{Papers Please}: whether or not to approve the entry permit of someone who claims to be a refugee \citep{pope2013papers}.
 %
 \emph{Papers Please} uses a carefully crafted choice structure to illustrate to the player how autocratic regimes instill complicity in their citizens by manipulating uncertainty.
 %
@@ -174,6 +184,28 @@ Craig Lindley has an excellent treatment of some of these modes, and discusses t
 In particular, Lindley's performer mode of engagement specifically addresses the pleasures of performance that we claim are affected by the ``false'' choices in \emph{Mass Effect}.
 %
 Interestingly enough, empirical studies of player behavior suggest that while people who explicitly role-play are probably not a majority \citep{lange2014youre}, many do still enjoy interactions related to characterization in narrative games (\cite{mallon2005stand}, see especially pp. 6--7).
+
+\subsection{Moral Choices}
+
+Our second analysis engages with the popular 2015 indie roleplaying game \emph{Undertale} and how players with similar goals but different priorities can be steered towards different decisions.
+%
+Existing scholarly literature on \emph{Undertale} has examined its portrayal of morality and ethics through its primary choice of 'kill' or 'spare' \citep{muller2017undertale}, the ways the game solidifies the significance of its choices through various mechanics \citep{day2017agency}, and how its musical score changes from tonal and pleasant to atonal and eerie depending on the player's approach \citep{perez2017undertale}.
+%
+Notably, \emph{Undertale} goes so far as to remember a player's decisions even after they ostensibly reset the game, encouraging the idea that its choices are meaningful \citep{hughes2015undertale}.
+%
+Although \emph{Undertale}'s designer Toby Fox has been reticent about his intentions regarding the game's moral choices, he is clearly interested in aspects of game design beyond traditional roleplaying game mechanics (quoted in \cite{feeld2015interview}):
+
+\begin{quote}
+  \itshape
+The addictive quality of ``numbers increasing'' is what drives a lot of games. But some of the most important things in life can't be accurately represented by numbers.
+\end{quote}
+
+
+Broader research on moral choices in games includes examinations of their implementation and studies of how players respond to them \citep{svelch2010good,weaver2012mirrored,consalvo2016playing}.
+%
+Of course, research on the psychological effects of games, especially violent games, is quite popular, but has come to largely mixed conclusions \citep{ferguson2008school,ellithorpe2015moral}.
+%
+In fact, there is also interest in using video games to encourage better moral decision making \citep{kastarov2017training}
 
 \subsection{Coercion and Complicity}
 
@@ -270,6 +302,139 @@ After all, \emph{Mass Effect} has an entire subsystem dedicated to tracking a pl
 Instead, choices such as this allow the player the opportunity to develop their character along a multitude of psychological dimensions without the designers having to implement systems for all of those.
 
 
+\section{Reinforcing Disparate Choices in \emph{Undertale}}
+
+
+\emph{Undertale} is an independently developed roleplaying game \citep{fox2015undertale} about a kid trying to get back home.
+%
+The game appears at first to be a normal roleplaying game with some interesting mechanics, but the facade of standard RPG mechanics hides a deeper morality-based storyline which challenges gamers to think more deeply about the random `monsters' they are fighting.
+%
+Players face different challenges and receive different endings depending on whether they play the game passively or aggressively.
+%
+These paths allow for the game to be a straightforward example of what happens when players with different play styles are forced to make the same choice.
+
+\begin{figure}[t]
+    \includegraphics[width=\textwidth]{fig/froggit.png}
+    \caption{A screenshot from \emph{Undertale} showing the first random encounter of the game, in which a `Froggit' ``hops close,'' (note that aggression is implied via the convention of a random encounter but not via the game's text). The main options are ``fight,'' ``act,'' ``item,'' and ``mercy,'' the last of which is unconventional.}
+    \label{fig:UT_froggit}
+\end{figure}
+
+Figure \ref{fig:UT_froggit} shows the very first random encounter of the game, and illustrates the repeated central choice of whether to fight, flee, or `spare' each opponent (``Flee'' and ``Spare'' are the options in the ``Mercy'' menu).
+%
+With the exception of certain bosses, all `enemies' in the game must be dealt with in one of these three ways, where killing them awards gold and experience points, fleeing gives no reward, and sparing them awards just experience points, and is only possible after taking a specific sequence of actions that pacify the opponent which the player must learn for each type of `monster.'
+%
+To understand how this repeated choice is set up to create dialogue within player communities, we can break it down using a formal analysis.
+
+\label{sec:analysis_steps}
+The formal process of choice poetic analysis, having been designed with machine implementation in mind, is quite detailed, but it can be summarized in four steps:
+\begin{enumerate}
+  \item \textbf{Goal Analysis}: Consider the player's mode(s) of engagement, and observe or assume the set of goals that influences their decisions. For a specific analysis, defining one or more model players in terms of goal sets is often sufficient.
+  \item \textbf{Likelihood Analysis}: Review the options offered at the choice in question, and note the full range of outcomes that they suggest, as well as the outcomes they actually produce. Also note how likely each suggested outcome seems to be.
+  \item \textbf{Prospective Analysis}: Describe the impact of each \emph{suggested outcome} on each player goal. This gives an overall impression of how the choice will appear to the player as they encounter it, known as their \textbf{prospective impression}. Specific option/outcome patterns may be recognizable at this point.
+  \item \textbf{Retrospective Analysis}: Review the \emph{actual} outcomes of each option, and describe their impacts on each player goal. This produces a picture of the \textbf{retrospective impression} that the choice will leave on the player once they observe an outcome. Pay close attention to any differences between suggested and actual outcomes. Again, specific patterns may be identifiable at this stage.
+\end{enumerate}
+The remaining subsections of this section describe the results of each of these steps, and how they differ for two different model players.
+%
+Our first model player (we'll call them the power player) is an experienced roleplaying game player, who is familiar with the conventions of the genre and who expects to be asked to fight their way to victory, collecting experience and gold along the way to gain power and overcome challenging bosses.
+%
+Our second model player (we'll call them the story player) is someone who has little experience with roleplaying games and is interested in experiencing the story of \emph{Undertale}.
+%
+In terms of modes of engagement, these model players are focused on power play and avatar play respectively.
+
+\subsection{Goal Analysis}
+
+To understand this choice with respect to our two model players, we use the following set of goals, with the listed power/story priorities for the respective player models:
+
+\begin{itemize}
+  \item Gain experience points (high/low)---The power player prioritizes experience points (XP), knowing that they may be necessary to accumulate power and beat the game. The story player understands them as a reward, but does not seek them out to the detriment of other goals.
+  \item Gain gold (high/low)---Just like XP, the power player seeks out gold while the story player welcomes it but does not prioritize it.
+  \item Show mercy (none/high)---While the power player sees interactions with the monsters as instrumental and inconsequential, our hypothetical story player, swayed by the aesthetics of the game, finds them cute and feels bad being violent towards them (of course, not all story-focused players would have this outlook).
+  \item Explore options (low/high)---Faced with a new game, both the power and story players are interested in figuring out what makes this game unique and what is possible within it, although for the power player this is secondary to other concerns. The `Mercy' menu especially, as an unconventional option, will attract interest.
+  \item Behave consistency (low/low)---Both of our hypothetical players not only exhibit standard human biases towards consistent action (and justification of their past actions using future actions), but also recognize that in most game systems, rewards are reserved for extreme behavioral profiles. This goal does not trump others, but influences ambiguous cases.
+\end{itemize}
+Although these precise sets of goals may not have been used by any actual players, they serve our purpose here of illuminating \emph{Undertale}'s choice poetics, and the component goals are reasonable approximations of goals likely shared by many players.
+
+\begin{table}[H]
+\centering
+\begin{tabular}{r l l l}
+  \toprule
+  & \multicolumn{1}{c}{\textbf{Fight}} & \multicolumn{1}{c}{\textbf{Flee}} & \multicolumn{1}{c}{\textbf{Spare}} \\
+  \midrule
+  \multirow{4}{6em}{\centering \rotatebox{90}{Initial}} & (likely) Froggit dies & (likely) Froggit lives & (likely) Froggit lives \\
+  & (likely) XP reward & (likely) no XP & (unlikely) XP reward \\
+  & (likely) Gold reward & (likely) no Gold & (unlikely) Gold reward \\
+  & (known) New option & (known) New option & (known) New option \\
+  & (known) Not repeated & (known) Not repeated & (known) Not repeated \\
+  \midrule
+  \multirow{4}{6em}{\centering \rotatebox{90}{Subsequent}} & (known) Froggit dies & (known) Froggit lives & (known) Froggit lives \\
+  & (known) XP reward & (known) No XP & (known) XP reward \\
+  & (known) Gold reward & (known) No gold & (known) No gold \\
+  & (known) Known option & (known) Known option & (known) Known option \\
+  & (known) Repeated (power) & (known) Not repeated & (known) Repeated (story) \\
+  \bottomrule
+\end{tabular}
+  \caption[\emph{Undertale} likelihood analysis]{Likelihood analysis for the choice shown in Fig. \ref{fig:UT_froggit}, both for the initial encounter and for subsequent encounters after all options have been explored. The ``new option'' `outcome' reflects the player goal of exploring unknown options, whereas the ``repeated'' `outcome' reflects the player goal of behaving consistently (and is different for our two player models).}
+\label{tab:UT_likelihoods}
+\end{table}
+
+\subsection{Likelihood Analysis}
+
+Setting aside our player goals for the moment, the next task is to decide which options suggest what kinds of outcomes.
+%
+Per our earlier examination of false choices, this can be a tricky business, as there is a wide range of possible outcomes to consider.
+%
+Luckily, our choice of player goals can narrow that range somewhat---for example, in this analysis, we are not concerned with outcomes relating to how the main character is portrayed, because neither of our model players have any goals related to character depiction.
+
+
+Table \ref{tab:UT_likelihoods} shows the likelihood analysis results, including both a first-time analysis with uncertainty and an analysis after several explorations when the player knows what to expect.
+%
+Extradiegetic outcomes relating to our exploration and consistency player goals have been inserted, and differ between the two player models.
+
+
+\begin{table}[H]
+\centering
+\begin{tabular}{c l l l c l l l}
+  \toprule
+  & \multicolumn{3}{c}{\textbf{Initial}} && \multicolumn{3}{c}{\textbf{Subsequent}} \\
+  \midrule
+  \textbf{Goal} & \multicolumn{1}{c}{\textbf{Fight}} & \multicolumn{1}{c}{\textbf{Flee}} & \multicolumn{1}{c}{\textbf{Spare}} && \multicolumn{1}{c}{\textbf{Fight}} & \multicolumn{1}{c}{\textbf{Flee}} & \multicolumn{1}{c}{\textbf{Spare}} \\
+  \midrule
+  \multirow{2}{7em}{\centering gain-XP} & \enables{} & \hinders{} & \enables{} && \multirow{2}{4.5em}{\advances{}} & \multirow{2}{4.5em}{\hinders{}} & \multirow{2}{4.5em}{\advances{}} \\
+                                        & \advances{} & \threatens{} & \threatens{} && & & \\
+  \midrule
+  \multirow{2}{7em}{\centering gain-gold} & \enables{} & \hinders{} & \enables{} && \multirow{2}{4.5em}{\advances{}} & \multirow{2}{4.5em}{\hinders{}} & \multirow{2}{4.5em}{\hinders{}} \\
+                                          & \advances{} & \threatens{} & \threatens{} && & & \\
+  \midrule
+  \multirow{2}{7em}{\centering show-mercy} & \hinders{} & \enables{} & \enables{} && \multirow{2}{4.5em}{\hinders{}} & \multirow{2}{4.5em}{\advances{}} & \multirow{2}{4.5em}{\advances{}} \\
+                                          & \threatens{} & \advances{} & \advances{} \\
+  \midrule
+  explore-options & \advances{} & \advances{} & \advances{} && <none> & <none> & <none> \\
+  \midrule
+  be-consistent & <none> & <none> & <none> && \advances{} (power) & <none> & \advances{} (story) \\
+  \midrule
+  \bottomrule
+\end{tabular}
+\caption[\emph{Undertale}option analysis]{Option analysis for the example choice shown in Fig. \ref{fig:UT_froggit}. Both the initial and subsequent outcome likelihoods for each option are used, and the results are shown in the left and right halves of the table. Note how uncertainty collapses once the options are explored, and the explore-options goal is irrelevant while the be-consistent goal has become relevant.}
+\label{tab:UT_options}
+\end{table}
+
+\subsection{Prospective Analysis}
+
+\label{sec:prospective_labels}
+
+Having listed a set of suggested outcomes and their likelihoods, the analysis can proceed to evaluate the prospective impressions created by this choice by evaluating the impact of each suggested outcome on each player goal.
+%
+For each option $\times$ goal, a set of tags can be assigned depending on whether that option has likely/unlikely outcomes that advance/hinder that goal.
+%
+For likely outcomes, we assign the labels \advances{} and \hinders{}, and for unlikely/unknown outcomes, we use the labels \enables{} and \threatens{}.
+%
+The results are shown in Table \ref{tab:UT_options}.
+
+% TODO: HERE
+
+
+\subsection{Retrospective Analysis}
+
 \begin{figure}[H]
   \includegraphics[width=\textwidth]{fig/papers-please-visa-choice.png}
   \caption{A screenshot from \emph{Papers Please} showing the interface as the player decides whether or not to admit a traveler. The traveler in question claims that she was denied an entry permit but will be killed if turned away. At this point, the player may pursue further questioning or examine the details of the applicant's passport, but must eventually either approve or deny her entry visa.}
@@ -292,17 +457,8 @@ Of interest to this analysis is the choice shown in Fig \ref{fig:PP_visa}, which
 Although this is not the only ambiguous situation that the game presents, variations of it are repeated, and it embodies one of the central themes of the game: how the uncertainty of information from unreliable sources can be pitted against the certain plight of one's family to turn a moral dilemma into a choice with a reluctant ``better'' option.
 %
 To illustrate in detail how these choices achieve this, a full choice poetic analysis is useful.
-
-
-The formal process of choice poetic analysis, having been designed with machine implementation in mind, is quite detailed, but it can be summarized in four steps:
-\begin{enumerate}
-  \item \textbf{Goal Analysis}: Consider the player's mode(s) of engagement, and observe or assume the set of goals that influences their decisions. For a specific analysis, defining one or more model players in terms of goal sets is often sufficient.
-  \item \textbf{Likelihood Analysis}: Review the options offered at the choice in question, and note the full range of outcomes that they suggest, as well as the outcomes they actually produce. Also note how likely each suggested outcome seems to be.
-  \item \textbf{Prospective Analysis}: Describe the impact of each \emph{suggested outcome} on each player goal. This gives an overall impression of how the choice will appear to the player as they encounter it, known as their \textbf{prospective impression}. Specific option/outcome patterns may be recognizable at this point.
-  \item \textbf{Retrospective Analysis}: Review the \emph{actual} outcomes of each option, and describe their impacts on each player goal. This produces a picture of the \textbf{retrospective impression} that the choice will leave on the player once they observe an outcome. Pay close attention to any differences between suggested and actual outcomes. Again, specific patterns may be identifiable at this stage.
-\end{enumerate}
-In the rest of this section, we show the results of each step for the choice described in Fig. \ref{fig:PP_visa}, stopping after prospective analysis, which is sufficient to elucidate the issues we are interested in.
-
+%
+In the rest of this section, we show the results of each step of a formal choice poetic analysis (see Section \ref{sec:analysis_steps}) for the choice described in Fig. \ref{fig:PP_visa}.
 
 \subsection{Goal Analysis}
 
@@ -330,19 +486,13 @@ If we were concerned about a particular group of players, we could repeat this a
   (unknown) Scam is rewarded & (unknown) Scam is thwarted \\
   \bottomrule
 \end{tabular}
-\caption[Example likelihood analysis]{Likelihood analysis for the example choice shown in Fig. \ref{fig:PP_visa}.}
-\label{tab:likelihoods}
+\caption[\emph{Papers Please} likelihood analysis]{Likelihood analysis for the choice shown in Fig. \ref{fig:PP_visa}.}
+\label{tab:PP_likelihoods}
 \end{table}
 
 \subsection{Likelihood Analysis}
 
-Setting aside our player goals for the moment, the next task is to decide which options suggest what kinds of outcomes.
-%
-Per our earlier examination of false choices, this can be a tricky business, as there is a wide range of possible outcomes to consider.
-%
-Luckily, our choice of player goals can narrow that range somewhat---for example, in this analysis, we are not concerned with outcomes relating to how the main character is portrayed, because our model player does not have any role-playing goals.
-%
-Table \ref{tab:likelihoods} shows a breakdown of outcomes and their likelihoods for both possible decisions.
+Table \ref{tab:PP_likelihoods} shows a breakdown of outcomes and their likelihoods for both possible decisions.
 %
 In this case, relevant outcomes have been essentially intuited from player goals.
 %
@@ -365,33 +515,26 @@ Note in particular the outcomes with unknown likelihood that represent competing
   admit-approved & $<$none$>$ & $<$none$>$ \\
   \bottomrule
 \end{tabular}
-\caption[Example option analysis]{Option analysis for the example choice shown in Fig. \ref{fig:PP_visa}.}
-\label{tab:options}
+  \caption[\emph{Papers Please} option analysis]{Option analysis for the example choice shown in Fig. \ref{fig:PP_visa}. See Section \ref{sec:prospective_labels} for how the labels were applied.}
+\label{tab:PP_options}
 \end{table}
 
 \subsection{Prospective Analysis}
 
-Having listed a set of suggested outcomes and their likelihoods, the analysis can proceed to evaluate the prospective impressions created by this choice by evaluating the impact of each suggested outcome on each player goal.
+The prospective analysis results are shown in Table \ref{tab:PP_options}; note that one of our goals (that of admitting approved applicants) is irrelevant here.
 %
-For each option $\times$ goal, a set of tags can be assigned depending on whether that option has likely/unlikely outcomes that advance/hinder that goal.
-%
-For likely outcomes, we assign the labels \advances{} and \hinders{}, and for unlikely/unknown outcomes, we use the labels \enables{} and \threatens{}.
-%
-The results are shown in Table \ref{tab:options}; note that one of our goals (that of admitting approved applicants) is irrelevant here.
-
-
-From the results, we can immediately see that although both options threaten some of our goals in some way, the deny option is clearly better if we focus on our high-priority goal of feeding our family.
+From these results, we can immediately see that although both options threaten some of our goals in some way, the deny option is clearly better if we focus on our high-priority goal of feeding our family.
 %
 In fact, although approving the applicant \emph{might} be an ethical action, that is not certain, and denying the applicant might also be in line with our ethical standards if in fact they are making up their story.
 
 
 While this choice does not contain any well-known outcome patterns, we can see that it does involve some moral concerns, pitting your desire to help your family against concerns about turning away a refugee.
 %
-The structure is clarified further if we consider the same analysis under the assumption that the applicant is telling the truth, which is shown in Table \ref{tab:trusting_options}.
+The structure is clarified further if we consider the same analysis under the assumption that the applicant is telling the truth, which is shown in Table \ref{tab:PP_trusting_options}.
 %
 This new analysis has the structure of a classic dilemma: Two options, each of which \hinders{} an equally important goal.
 %
-Compared to Table \ref{tab:options}, concerns about apprehending criminals are gone, and the refugee-related outcomes, now believed to be likely, make the moral weight of the decision unambiguous.
+Compared to Table \ref{tab:PP_options}, concerns about apprehending criminals are gone, and the refugee-related outcomes, now believed to be likely, make the moral weight of the decision unambiguous.
 
 \begin{table}[H]
 \centering
@@ -411,7 +554,7 @@ Compared to Table \ref{tab:options}, concerns about apprehending criminals are g
   \bottomrule
 \end{tabular}
 \caption[Alternate option analysis]{Option analysis for the choice from Fig. \ref{fig:PP_visa} in the case where the applicant is assumed to be truthful.}
-\label{tab:trusting_options}
+\label{tab:PP_trusting_options}
 \end{table}
 
 
