Finished first draft w/ Undertale included.
-Peter Mawhorter

--- a/references.bib
+++ b/references.bib
@@ -2046,17 +2046,6 @@ year={2010}
   publisher={Springer}
 }
 
-@article{hall2012lifting,
-  title={Lifting the Veil of Morality: Choice Blindness and Attitude Reversals on a Self-Transforming Survey},
-  author={Hall, L. and Johansson, P. and Strandberg, T.},
-  journal={PLoS ONE},
-  volume={7},
-  number={9},
-  pages={e45457},
-  doi={10.1371/journal.pone.0045457},
-  year={2012}
-}
-
 @inproceedings{mccoy2012prom,
   title = {Prom Week},
   author = {McCoy, Josh and Treanor, Mike and Samuel, Ben and Reed, Aaron A. and Wardrip-Fruin, Noah and Mateas, Michael},
@@ -2534,6 +2523,43 @@ doi = {10.1177/1555412017719344},
 URL = {https://doi.org/10.1177/1555412017719344},
 eprint = {https://doi.org/10.1177/1555412017719344},
 abstract = { The goal of this study is to support game designers in the selection and implementation of game mechanisms to promote players’ moral sensitivity (MS). A lack of MS may lead people to behave unethically, without awareness for their actions’ moral implications. In this study, we conduct a theory-based evaluation of 20 distinct game mechanisms in view of their potential to promote MS. MS is thereby operationalized in terms of three learning outcomes (LOs): empathic concern for relevant groups, alertness to values/principles, and awareness for one’s vulnerability to biases. This study suggests that MS is best promoted through a careful combination of game mechanisms, addressing all three LOs. }
+}
+
+@article{hall2012lifting,
+    author = {Hall, Lars and Johansson, Petter and Strandberg, Thomas},
+    journal = {PLOS ONE},
+    publisher = {Public Library of Science},
+    title = {Lifting the Veil of Morality: {Choice} Blindness and Attitude Reversals on a Self-Transforming Survey},
+    year = {2012},
+    month = {09},
+    volume = {7},
+    url = {https://doi.org/10.1371/journal.pone.0045457},
+    pages = {1-8},
+    abstract = {Every day, thousands of polls, surveys, and rating scales are employed to elicit the attitudes of humankind. Given the ubiquitous use of these instruments, it seems we ought to have firm answers to what is measured by them, but unfortunately we do not. To help remedy this situation, we present a novel approach to investigate the nature of attitudes. We created a self-transforming paper survey of moral opinions, covering both foundational principles, and current dilemmas hotly debated in the media. This survey used a magic trick to expose participants to a reversal of their previously stated attitudes, allowing us to record whether they were prepared to endorse and argue for the opposite view of what they had stated only moments ago. The result showed that the majority of the reversals remained undetected, and a full 69% of the participants failed to detect at least one of two changes. In addition, participants often constructed coherent and unequivocal arguments supporting the opposite of their original position. These results suggest a dramatic potential for flexibility in our moral attitudes, and indicates a clear role for self-attribution and post-hoc rationalization in attitude formation and change.},
+    number = {9},
+    doi = {10.1371/journal.pone.0045457}
+}
+
+@article{brehm1956postdecision,
+  title={Postdecision Changes in the Desirability of Alternatives},
+  author={Brehm, Jack W},
+  journal={The Journal of Abnormal and Social Psychology},
+  volume={52},
+  number={3},
+  pages={384},
+  year={1956},
+  publisher={American Psychological Association}
+}
+
+@article{mather2000misremembrance,
+  title={Misremembrance of Options Past: {Source} Monitoring and Choice},
+  author={Mather, Mara and Shafir, Eldar and Johnson, Marcia K},
+  journal={Psychological Science},
+  volume={11},
+  number={2},
+  pages={132--138},
+  year={2000},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
 }
 
 %%%%%%%%%%%%%%%%
