--- a/cpbe.tex
+++ b/cpbe.tex
@@ -367,8 +367,8 @@ Although these precise sets of goals may not have been used by any actual player
   & (known) Not repeated & (known) Not repeated & (known) Not repeated \\
   \midrule
   \multirow{4}{6em}{\centering \rotatebox{90}{Subsequent}} & (known) Froggit dies & (known) Froggit lives & (known) Froggit lives \\
-  & (known) XP reward & (known) No XP & (known) XP reward \\
-  & (known) Gold reward & (known) No gold & (known) No gold \\
+  & (known) XP reward & (known) No XP & (known) No XP \\
+  & (known) Gold reward & (known) No gold & (known) Gold reward \\
   & (known) Known option & (known) Known option & (known) Known option \\
   & (known) Repeated (power) & (known) Not repeated & (known) Repeated (story) \\
   \bottomrule
@@ -399,10 +399,10 @@ Extradiegetic outcomes relating to our exploration and consistency player goals 
   \midrule
   \textbf{Goal} & \multicolumn{1}{c}{\textbf{Fight}} & \multicolumn{1}{c}{\textbf{Flee}} & \multicolumn{1}{c}{\textbf{Spare}} && \multicolumn{1}{c}{\textbf{Fight}} & \multicolumn{1}{c}{\textbf{Flee}} & \multicolumn{1}{c}{\textbf{Spare}} \\
   \midrule
-  \multirow{2}{7em}{\centering gain-XP} & \enables{} & \hinders{} & \enables{} && \multirow{2}{4.5em}{\advances{}} & \multirow{2}{4.5em}{\hinders{}} & \multirow{2}{4.5em}{\advances{}} \\
+  \multirow{2}{7em}{\centering gain-XP} & \enables{} & \hinders{} & \enables{} && \multirow{2}{4.5em}{\advances{}} & \multirow{2}{4.5em}{\hinders{}} & \multirow{2}{4.5em}{\hinders{}} \\
                                         & \advances{} & \threatens{} & \threatens{} && & & \\
   \midrule
-  \multirow{2}{7em}{\centering gain-gold} & \enables{} & \hinders{} & \enables{} && \multirow{2}{4.5em}{\advances{}} & \multirow{2}{4.5em}{\hinders{}} & \multirow{2}{4.5em}{\hinders{}} \\
+  \multirow{2}{7em}{\centering gain-gold} & \enables{} & \hinders{} & \enables{} && \multirow{2}{4.5em}{\advances{}} & \multirow{2}{4.5em}{\hinders{}} & \multirow{2}{4.5em}{\advances{}} \\
                                           & \advances{} & \threatens{} & \threatens{} && & & \\
   \midrule
   \multirow{2}{7em}{\centering show-mercy} & \hinders{} & \enables{} & \enables{} && \multirow{2}{4.5em}{\hinders{}} & \multirow{2}{4.5em}{\advances{}} & \multirow{2}{4.5em}{\advances{}} \\
@@ -428,12 +428,59 @@ For each option $\times$ goal, a set of tags can be assigned depending on whethe
 %
 For likely outcomes, we assign the labels \advances{} and \hinders{}, and for unlikely/unknown outcomes, we use the labels \enables{} and \threatens{}.
 %
-The results are shown in Table \ref{tab:UT_options}.
+The results are shown in Table \ref{tab:UT_options}, which includes two versions: the three columns on the left show the evaluations using our initial likelihood assignments, while the columns on the right show the evaluations after all outcomes are known.
 
-% TODO: HERE
+
+The assignment of prospective labels allows us to analyze the choice by comparing it to known choice structures, or just by observing patterns among the labels.
+%
+In this case, we can see that for both player models, the fight and spare options are more attractive than the flee option, and in fact the spare option dominates the flee option for this goal set in all cases, making it mostly irrelevant (we are not considering player skill here, but that is a potentially important factor that limits free decision-making, especially later in the game).
+%
+Comparing just the fight and spare options for the initial decision, we can see that the spare option is seen as a bit dubious in terms of our power-related goals, but clearly superior in terms of our mercy goal.
+
+
+Considering our power and story players, the power player is most likely to pick fight, because they disregard the show-mercy goal entirely, and so from their  perspective, fight is the only option without any downsides (again we are not worrying about player skill, which complicates that conclusion).
+%
+Meanwhile, the story player, whose highest-priority goals are to explore and show mercy, will likely pick the spare option, as it is best for their high-priority goals while not entirely sacrificing their low-priority goals.
+%
+As both of these players encounter this choice again, their explore-options goal will now favor the option they did not choose the first time, and the story player may now attempt fighting, and will probably attempt fleeing, because their high-level goals of exploration and mercy are now in conflict.
+%
+Ultimately, the story player will find sparing most rewarding after all options have been explored, however.
+%
+In contrast, the power player, with a lower priority on exploration, may eventually try spare and/or flee out of boredom, but when learning that their immediate rewards are less than the reward associated with fighting, they will continue to fight most enemies.
+
+
+As these patterns are established, biases that promote consistency (see e.g., \cite{brehm1956postdecision,mather2000misremembrance,hall2012lifting}) will be reinforced, and the power and story players will in all likelihood settle for picking fight and spare respectively most of the time.
+%
+As we can see from our analysis, the key factor that separates these models is their relative prioritization of the mercy goal, in conjunction with their priorities for the gain-XP and gain-gold goals.
+%
+However, given an audience of players who have a spectrum of preferences regarding these goals, the game encourages some to stick to fighting (via consistent gold and XP rewards) and others to stick to sparing (via a gold reward that makes progress possible, combined with the reward of letting the enemy survive).
+%
+Importantly, beyond the immediate rewards shown here, sparing monsters also leads to a number of other acknowledgements and ultimately rewards the player with the ability to befriend some of the more important characters, which is a reward well-suited to players interested in exploring a deeper story.
 
 
 \subsection{Retrospective Analysis}
+
+After making each decision, the immediate rewards are as expected (after seeing each option once).
+%
+However, as the game progresses there are longer-term consequences for both systematic approaches that we consider here.
+%
+In particular, towards the end of the game, the story line diverges sharply, in the aggressive case throwing the player into brutal battles against several bosses, and in the passive case allowing the player to befriend some of those characters and not fight them at all (although other bosses appear).
+
+
+The long-term consequences of these individual decisions are not simply rewards or punishments, although sparing monsters leads to a happier outcome to the story.
+%
+Instead, they represent divergent worlds, which gives the player a strong sense of agency, but also causes players who take different paths and then talk about the game to disagree.
+%
+By reinforcing each decision path separately, and letting content diverge significantly in the end game, \emph{Undertale} fosters dialogue between its players, because once they learn of each others disparate experiences, they will naturally be curious as to how those experiences were unlocked.
+%
+Had the game simply punished players for fighting the enemies, this would have delivered a fairly simplistic moral message, but instead, the game lets that message unfold via dialogue with other players, and as previously mentioned, uses some extra-diegetic mechanics to give its choices extra permanence.
+
+
+As explored in Hughes' review of the game \citeyear{hughes2015undertale}, part of the message of \emph{Undertale} is not merely about violence itself, but about the player's willingness to callously manipulate the lives of the characters in the game.
+%
+The moral dichotomy that it sets up through a carefully crafted choice that will separate its audience into two opposing halves serves to underline this point and get players to think deeply about it as they attempt to justify their decisions to each other.
+%
+And although choice poetics is not necessary to understand this, it does help illuminate why that first choice is made different ways by different players, and our analysis could be taken further to try to understand what kinds of players might perceive that choice in other ways, or even what changes to that choice structure could be made in order to separate the audience differently.
 
 \begin{figure}[H]
   \includegraphics[width=\textwidth]{fig/papers-please-visa-choice.png}
@@ -605,6 +652,15 @@ From there, we found that although some of \emph{Mass Effect}'s choices have no 
 Ultimately, this analysis highlights the importance of considering player motives when analyzing choices, and also foregrounds how broad the notion of a `consequence' is in narrative games.
 
 
+Furthering our exploration of modes of engagement, we gave an example of paired choice analysis with \emph{Undertale}, showing how choice poetics can be used to contrast different play styles.
+%
+The example used was relatively simple due to the quite distinct player models being compared, but more complex analyses could be done with different goal sets or between players with less contrasting points of view.
+%
+The benefit in this case was a detailed look at how \emph{Undertale} separates players with different priorities into different choice patterns in order to encourage dialogue between players who experience the game differently.
+%
+Choice poetics helps pinpoint exactly which outcomes drive that separation, and what sets of priorities are necessary for it to happen.
+
+
 We went into more depth with \emph{Papers Please}, laying out tables of goals and outcomes in an attempt to pin down subtle characteristics of a common choice in that game.
 %
 By paying close attention to how the uncertainty attached to some outcomes was crucial in avoiding a dilemma configuration for that choice, we were able to describe in detail how that choice tilts players towards complicity with the game's fictional regime, and what other aspects of the choice design help contribute to this outcome.
@@ -616,7 +672,7 @@ For example, revealing after-the-fact that most applicants begging for asylum we
 The utility of choice poetics here then is to identify exactly how a choice creates a certain feeling, and which elements of the choice might be changed to create a different one.
 
 
-In both of the analyses presented here, we engage with choice poetics as human scholars, using only those pieces of the theory that are relevant to the specific choices at hand and glossing over details that seem evident from common sense.
+In all of the analyses presented here, we engage with choice poetics as human scholars, using only those pieces of the theory that are relevant to the specific choices at hand and glossing over details that seem evident from common sense.
 %
 Although choice poetics was designed with computational operationalization in mind, our analyses show that it can also be of use to human critics as a framework for discussion.
 %
