Implemented Noah's feedback.
-Peter Mawhorter

--- a/references.bib
+++ b/references.bib
@@ -636,7 +636,7 @@ isbn={9780521359443},
   address={Watertown, MA}
 }
 
-@book{Ryan1991,
+@book{ryan1991possible,
   title={Possible Worlds, Artificial Intelligence, and Narrative Theory},
   author={Ryan, Marie-Laure},
   year={1991},
@@ -2355,6 +2355,20 @@ abstract = {Just as books and films about traumatic events have become part of W
   issn="1572-8439",
   doi="10.1007/s10676-016-9407-z",
   url="https://doi.org/10.1007/s10676-016-9407-z"
+}
+
+% A critique of Spec Ops: The Line that talks about its deconstruction of
+% traditional shooter mechanics but also mentions how it still supports a
+% mainstream American conceptualization of Arabs.
+@article{murray2016race,
+  title={Race, Gender, and Genre in {Spec Ops: The Line}},
+  author={Murray, Soraya},
+  journal={Film Quarterly},
+  volume={70},
+  number={2},
+  pages={38--48},
+  year={2016},
+  publisher={University of California Press}
 }
 
 
