Final authorship updates. -pmwh

--- a/cpbe.tex
+++ b/cpbe.tex
@@ -58,11 +58,10 @@
 \Title{Choice Poetics by Example}
 
 % Author Orchid ID: enter ID or remove command
-% TODO: These
 \newcommand{\orcidauthorA}{0000-0001-7821-1973} % Use \orcidA{} below
 \newcommand{\orcidauthorB}{0000-0003-3874-1720}
-\newcommand{\orcidauthorC}{0000-0002-1897-6293} % TODO: Verify this?
-\newcommand{\orcidauthorD}{0000-0003-1964-7624} % TODO: Verify this?
+\newcommand{\orcidauthorC}{0000-0002-1897-6293}
+\newcommand{\orcidauthorD}{0000-0003-1964-7624}
 
 % Authors, for the paper (add full first names)
 \Author{Peter Mawhorter *$^{1}$ \orcidA{}, Carmen Zegura $^{2}$, Alex Gray $^{3}$, Arnav Jhala $^{3}$ \orcidB{}, Michael Mateas $^{4}$ \orcidC{} and Noah Wardrip-Fruin $^{4}$ \orcidD{}}
@@ -73,8 +72,8 @@
 % Affiliations / Addresses (Add [1] after \address if there is only one affiliation.)
 \address{%
 $^{1}$ \quad Massachusetts Institute of Technology; pmawhorter@gmail.com\\
-$^{2}$ \quad Brown University; TODO@brown.edu\\
-$^{3}$ \quad North Carolina State University; [TODO, ajhala]@ncsu.edu\\
+$^{2}$ \quad Brown University; carmen\_zegura@brown.edu\\
+$^{3}$ \quad North Carolina State University; [magray2, ajhala]@ncsu.edu\\
 $^{4}$ \quad University of California Santa Cruz; [michaelm, nwf]@soe.ucsc.edu}
 
 % Contact information of the corresponding author
@@ -682,7 +681,7 @@ Of course, we will also continue examining games, and may come up with more exam
 \supplementary{A video illustrating the possible outcomes of one false choice in \emph{Mass Effect} is available at \linksupplementary{s1}, as well as on YouTube at \url{https://www.youtube.com/watch?v=8BewZnUnDoE}.}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\authorcontributions{Conceptualization, all authors; Investigation, Peter Mawhorter and Arnav Jhala; Writing--Original Draft Preparation, Peter Mawhorter; Writing--Review \& Editing, all authors.}
+\authorcontributions{Conceptualization, all authors; Investigation, Peter Mawhorter, Carmen Zegura, Alex Gray, and Arnav Jhala; Writing--Original Draft Preparation, Peter Mawhorter, Carmen Zegura, and Alex Gray; Writing--Review \& Editing, Peter Mawhorter and Noah Wardrip-Fruin.}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \funding{The authors would like to acknowledge the support of NSF grant IIS-1409992, which supported some of the initial development of choice poetics.}
