Revisions after first round. -pmwh

--- a/references.bib
+++ b/references.bib
@@ -1390,8 +1390,8 @@ url={http://www.digra.org/wp-content/uploads/digital-library/06276.41516.pdf}
 }
 
 % Empirical studies of player motivations and enjoyments in narrative games
-% (adventure games + RPGs). Players preferred interactive characterization (of
-  % NPCs, mostly, however)! Players just like their characterization choices to
+% (adventure games + RPGs). Players preferred interactive characterization of
+% NPCs, mostly, however players just like their characterization choices to
 % have consequences.
 @article{mallon2005stand,
   title={Stand Up and Take Your Place: {I}dentifying Narrative Elements in Narrative Adventure and Role-Play Games},
@@ -2931,4 +2931,42 @@ abstract = { The goal of this study is to support game designers in the selectio
   url={http://outermode.com/interview-toby-fox-undertale},
   urldate={2018-06-22},
   howpublished={Online; \href{http://outermode.com/interview-toby-fox-undertale}{\nolinkurl{http://outermode.com/interview-toby-fox-undertale}}; accessed 2018-06-22.}
+}
+
+%%%%%%%%%%%%%%%%%%%%%%%
+% Player Perspectives %
+%%%%%%%%%%%%%%%%%%%%%%%
+
+% Pretty pacifist Undertale blind let's play:
+@misc{fuandon2015lets,
+  author={fuandon},
+  title={{Let's Play Undertale! [BLIND] Part 1: Hello, Mom}},
+  year={2015},
+  month={9},
+  url={https://www.youtube.com/watch?v=plvjJx-ERWY},
+  urldate={2018-08-16},
+  howpublished={Online; \href{https://www.youtube.com/watch?v=plvjJx-ERWY}{\nolinkurl{https://www.youtube.com/watch?v=plvjJx-ERWY}}; accessed 2018-08-16.}
+}
+
+% Aggressive Undertale blind let's play:
+@misc{therpgminx2015lets,
+  author={TheRPGMinx},
+  title={{LET'S GO DEEPER UNDERGROUND | Undertale | 01}},
+  year={2015},
+  month={10},
+  url={https://www.youtube.com/watch?v=DDLmmljliy0&list=PLQLck4CGSUpt4rFlbspHGNKg31Z9cKJpY&index=1},
+  urldate={2018-08-16},
+  howpublished={Online; \href{https://www.youtube.com/watch?v=DDLmmljliy0&list=PLQLck4CGSUpt4rFlbspHGNKg31Z9cKJpY&index=1}{\nolinkurl{https://www.youtube.com/watch?v=DDLmmljliy0&list=PLQLck4CGSUpt4rFlbspHGNKg31Z9cKJpY&index=1}}; accessed 2018-08-16.}
+}
+
+% Steam discussion about Undertale endings:
+
+@misc{oh2016genocide,
+  author={oh},
+  title={{``Genocide the best ending?'' Steam Community thread}},
+  year={2016},
+  month={03},
+  url={https://steamcommunity.com/app/391540/discussions/0/392185054118254079/},
+  urldate={2018-08-16},
+  howpublished={Online; \href{https://steamcommunity.com/app/391540/discussions/0/392185054118254079/}{\nolinkurl{https://steamcommunity.com/app/391540/discussions/0/392185054118254079/}}; accessed 2018-08-16.}
 }
